--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="notificationMessage">Você está ouvindo, Rádio AP-306</string>
     <string name="notificationMessagePause">Click aqui e volte a ouvir, Rádio AP-306</string>
     <string name="volume">Volume: </string>
+    <string name="connectServerError">Erro ao tentar conectar-se ao servidor.</string>
+    <string name="connectionError">Você não está conectado a internet.</string>
     <string name="action_settings">Settings</string>
 </resources>
